# opengl-ffmpeg-VideoPlayer

./: .gitmodules  CMakeLists.txt  README.md
lib/ffmpeg/: CMakeLists.txt
lib/glad/: Glad.vcxproj  premake5.lua
lib/glad/bin-int/Debug-windows-x86_64/Glad/Glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Glad.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
video_rendering/: CMakeLists.txt  main.cc  video_rendering.cc
video_rendering/include/: video-rendering.hh
